adjust: search bar ui

--- a/Laperrr/Feature/Home/View/HomeViewController.xib
+++ b/Laperrr/Feature/Home/View/HomeViewController.xib
@@ -25,8 +25,9 @@
                     <rect key="frame" x="0.0" y="100" width="414" height="762"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
-                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="hlY-0r-GE9">
+                <searchBar contentMode="redraw" barStyle="black" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlY-0r-GE9">
                     <rect key="frame" x="0.0" y="44" width="414" height="56"/>
+                    <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </subviews>
