--- a/Laperrr/Feature/Launch/View/Base.lproj/LaunchScreen.storyboard
+++ b/Laperrr/Feature/Launch/View/Base.lproj/LaunchScreen.storyboard
@@ -29,8 +29,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.up.bin.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-Nx-XIx">
-                                <rect key="frame" x="195" y="439" width="24" height="17.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn-app-logo" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-Nx-XIx">
+                                <rect key="frame" x="87" y="381.5" width="240" height="133"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -53,7 +53,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow.up.bin.fill" catalog="system" width="128" height="93"/>
+        <image name="icn-app-logo" width="240" height="133"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
