--- a/Laperrr/Feature/Profile/View/ExperienceItemView/ExperienceItemView.xib
+++ b/Laperrr/Feature/Profile/View/ExperienceItemView/ExperienceItemView.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileItemView" customModule="Laperrr" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExperienceItemView" customModule="Laperrr" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="JVF-mN-yi2"/>
                 <outlet property="labelDescription" destination="mrv-rV-SNn" id="bdG-Pw-09I"/>
@@ -23,13 +23,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QS7-tk-BIp">
-                    <rect key="frame" x="40" y="8" width="358" height="21"/>
+                    <rect key="frame" x="24" y="8" width="374" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oby-eR-Brm">
-                    <rect key="frame" x="16" y="10" width="16" height="16"/>
+                    <rect key="frame" x="0.0" y="10" width="16" height="16"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="9Rt-4d-4aF"/>
@@ -37,7 +37,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrv-rV-SNn">
-                    <rect key="frame" x="40" y="37" width="358" height="20.5"/>
+                    <rect key="frame" x="24" y="37" width="374" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -54,7 +54,7 @@
                 <constraint firstAttribute="trailing" secondItem="QS7-tk-BIp" secondAttribute="trailing" constant="16" id="ZTm-8F-o5r"/>
                 <constraint firstItem="mrv-rV-SNn" firstAttribute="leading" secondItem="QS7-tk-BIp" secondAttribute="leading" id="kpW-GK-avB"/>
                 <constraint firstItem="QS7-tk-BIp" firstAttribute="top" secondItem="oby-eR-Brm" secondAttribute="top" constant="-2" id="lp4-qD-O9G"/>
-                <constraint firstItem="oby-eR-Brm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="mId-Ml-gQ4"/>
+                <constraint firstItem="oby-eR-Brm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="mId-Ml-gQ4"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-13.043478260869566" y="84.709821428571431"/>
