--- a/Laperrr/Feature/FoodList/View/FoodList/FoodListViewController.xib
+++ b/Laperrr/Feature/FoodList/View/FoodList/FoodListViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="Laperrr" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FoodListViewController" customModule="Laperrr" customModuleProvider="target">
             <connections>
                 <outlet property="activityIndicator" destination="65d-iu-vrs" id="s7u-La-RKa"/>
                 <outlet property="searchBar" destination="hlY-0r-GE9" id="60T-3n-SX1"/>
