--- a/Laperrr/Feature/Categories/View/TableViewCell/CategoriesTableViewCell.xib
+++ b/Laperrr/Feature/Categories/View/TableViewCell/CategoriesTableViewCell.xib
@@ -23,34 +23,27 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="K34-U9-3JI">
-                        <rect key="frame" x="16" y="41" width="288" height="136"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MLh-Pq-LiX">
+                        <rect key="frame" x="16" y="45" width="288" height="128"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="136" id="3Hb-dJ-Gp9"/>
+                            <constraint firstAttribute="height" constant="128" id="qsr-eU-fLP"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JtR-Kf-K3M">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                    </collectionView>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="K34-U9-3JI" secondAttribute="trailing" constant="16" id="A8J-TN-PtM"/>
+                    <constraint firstAttribute="trailing" secondItem="MLh-Pq-LiX" secondAttribute="trailing" constant="16" id="4Im-Jr-G9E"/>
                     <constraint firstItem="CS1-aQ-7ak" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="BnY-Z9-um2"/>
                     <constraint firstAttribute="trailing" secondItem="CS1-aQ-7ak" secondAttribute="trailing" constant="16" id="SL7-Bw-WA8"/>
-                    <constraint firstItem="K34-U9-3JI" firstAttribute="top" secondItem="CS1-aQ-7ak" secondAttribute="bottom" constant="4" id="TyY-lI-6cN"/>
                     <constraint firstItem="CS1-aQ-7ak" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="fYO-Va-VcG"/>
-                    <constraint firstAttribute="bottom" secondItem="K34-U9-3JI" secondAttribute="bottom" constant="8" id="iQW-Pg-xDK"/>
-                    <constraint firstItem="K34-U9-3JI" firstAttribute="leading" secondItem="CS1-aQ-7ak" secondAttribute="leading" id="lb6-0Q-zAO"/>
+                    <constraint firstItem="MLh-Pq-LiX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="iAK-Md-2Nn"/>
+                    <constraint firstAttribute="bottom" secondItem="MLh-Pq-LiX" secondAttribute="bottom" constant="12" id="qjQ-c5-28f"/>
+                    <constraint firstItem="MLh-Pq-LiX" firstAttribute="top" secondItem="CS1-aQ-7ak" secondAttribute="bottom" constant="8" id="stv-ms-jIl"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="collectionView" destination="K34-U9-3JI" id="5m6-A6-dXv"/>
+                <outlet property="imageFood" destination="MLh-Pq-LiX" id="XyD-XE-93m"/>
                 <outlet property="labelName" destination="CS1-aQ-7ak" id="n03-k6-qmv"/>
             </connections>
             <point key="canvasLocation" x="139" y="80"/>
