--- a/Laperrr/Feature/Categories/View/FoodListByCategoryViewController.xib
+++ b/Laperrr/Feature/Categories/View/FoodListByCategoryViewController.xib
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoriesViewController" customModule="Laperrr" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FoodListByCategoryViewController" customModule="Laperrr" customModuleProvider="target">
             <connections>
-                <outlet property="activityIndicator" destination="5y6-c5-tgw" id="EWJ-6v-7vJ"/>
-                <outlet property="tableView" destination="HVL-tc-g3j" id="Aj0-wO-Km2"/>
+                <outlet property="activityIndicator" destination="xO5-fE-DWk" id="up0-A1-nVq"/>
+                <outlet property="tableView" destination="j4y-ns-KEU" id="be7-uB-gFU"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,25 +21,25 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HVL-tc-g3j">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j4y-ns-KEU">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                 </tableView>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="5y6-c5-tgw">
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="xO5-fE-DWk">
                     <rect key="frame" x="197" y="438" width="20" height="20"/>
                 </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="5y6-c5-tgw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3VE-Vb-DW7"/>
-                <constraint firstItem="HVL-tc-g3j" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Tcq-lE-Yf6"/>
-                <constraint firstItem="HVL-tc-g3j" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Xdy-oi-0hS"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HVL-tc-g3j" secondAttribute="trailing" id="Y0O-jb-kdj"/>
-                <constraint firstItem="5y6-c5-tgw" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Zva-5Y-6DM"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="HVL-tc-g3j" secondAttribute="bottom" id="qdA-pg-IGq"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j4y-ns-KEU" secondAttribute="trailing" id="18S-8r-f8b"/>
+                <constraint firstItem="j4y-ns-KEU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ZDD-be-gyu"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="j4y-ns-KEU" secondAttribute="bottom" id="pZN-QF-08m"/>
+                <constraint firstItem="xO5-fE-DWk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="trt-4Y-siH"/>
+                <constraint firstItem="xO5-fE-DWk" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="xuG-lA-UKh"/>
+                <constraint firstItem="j4y-ns-KEU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="yi6-I5-7Vb"/>
             </constraints>
-            <point key="canvasLocation" x="-146" y="-21"/>
+            <point key="canvasLocation" x="139" y="80"/>
         </view>
     </objects>
     <resources>
